# template-T-Project

./: .gitmodules  CMakeLists.txt  ReadMe.md  build.sh
cmake/: glog.cmake  spdlog.cmake
fusion/: fusion.py  model.onnx  model.onnx.data  test.txt
src/: CMakeLists.txt  main.cpp
